@@ -490,6 +490,25 @@ The parameters may also END with the key word MASK= followed by a mask.  This \
 mask will select which kinds of mobs and players will be affected by this property. \
 See ZAPPERMASKS for more information on zapper mask syntax.
 
+PROP_HEREENABLER=\
+Property   : Prop_HereEnabler\n\r\
+Targets    : Rooms, Areas\n\r\
+Parameters : a list of properly named spells separated by semicolons\n\r\
+Parameters : Spell names may optionally have parameters in parenthesis\n\r\
+Parameters : The above parameters may be followed by an optional mask\n\r\
+Example    : Spell_MageArmor;Spell_Shield\n\r\
+Example    : 90%;Spell_Portal(Somewhere else);Prayer_SummonElemental(/FIRE)\n\r\
+Example    : Spell_MageArmor;Spell_Shield; MASK=-RACE +Dwarf\n\r\
+Description: \n\r\
+Whenever someone enters the room or area, they \
+will be granted the spells, skills listed.  The percentage given is optional, \
+and will be the proficiency of the skill.  If a percentage is not given, the \
+default is 100%.  When they leave, they lose the spells/skills.\n\r\
+\n\r\
+The parameters may also END with the key word MASK= followed by a mask.  This \
+mask will select which kinds of mobs and players will be affected by this property. \
+See ZAPPERMASKS for more information on zapper mask syntax.
+
 PROP_HERESPELLCAST=\
 Property   : Prop_HereSpellCast\n\r\
 Targets    : Rooms\n\r\
