@@ -2,6 +2,7 @@
    1. Qualify now shows language limits
    2. New Prop_NoTeleport exceptions
    3. ALIAS commands now supports "noecho" prefix to prevent echos.
+   4. New property: Prop_HereEnabler, like the other Prop_Here* and Prop_*Enabler props.
 # Build 5.9.3 Released 05/08/2016
    1. Follower behavior now has a few more options.
    2. STAT [MOBNAME] will now give full editor stats also, and 
